--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "font-awesome": "^4.7.0",
     "ngx-spinner": "^6.1.2",
     "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "typescript": "~2.9.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
