--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.8.6",
     "@angular/animations": "^6.1.0",
+    "@angular/cli": "~6.2.5",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
-    "@angular-devkit/build-angular": "^0.8.6",
-    "@angular/cli": "~6.2.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "app": "^0.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
